--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
                 "test",
                 "show-teams"
             ],
-            "cwd": "${workspaceFolder}/src/",
+            "cwd": "${workspaceFolder}",
             "console": "integratedTerminal"
         },
         {
@@ -25,7 +25,7 @@
                 "test",
                 "show-standings"
             ],
-            "cwd": "${workspaceFolder}/src/",
+            "cwd": "${workspaceFolder}",
             "console": "integratedTerminal"
         },
         {
@@ -37,7 +37,7 @@
                 "test",
                 "show-round"
             ],
-            "cwd": "${workspaceFolder}/src/",
+            "cwd": "${workspaceFolder}",
             "console": "integratedTerminal"
         },
         {
@@ -49,7 +49,7 @@
                 "test",
                 "revert-round"
             ],
-            "cwd": "${workspaceFolder}/src/",
+            "cwd": "${workspaceFolder}",
             "console": "integratedTerminal"
         },
         {
@@ -61,7 +61,7 @@
                 "test",
                 "next-round"
             ],
-            "cwd": "${workspaceFolder}/src/",
+            "cwd": "${workspaceFolder}",
             "console": "integratedTerminal"
         },
         {
@@ -73,7 +73,7 @@
                 "test",
                 "stop-tournament"
             ],
-            "cwd": "${workspaceFolder}/src/",
+            "cwd": "${workspaceFolder}",
             "console": "integratedTerminal"
         },
         {
