--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 resources/data/*
 
+*.snap
+
 ### languages
 
 ## python
@@ -539,6 +541,36 @@ tags
 !.vscode/launch.json
 !.vscode/extensions.json
 
+
+### archives
+# It's better to unpack these files and commit the raw source because
+# git has its own built in compression methods.
+*.7z
+*.jar
+*.rar
+*.zip
+*.gz
+*.tgz
+*.bzip
+*.bz2
+*.xz
+*.lzma
+*.cab
+
+# Packing-only formats
+*.iso
+*.tar
+
+# Package management formats
+*.dmg
+*.xpi
+*.gem
+*.egg
+*.deb
+*.rpm
+*.msi
+*.msm
+*.msp
 
 ### os
 
