snapcraft.yaml: set grade to stable and confinement to strict

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -5,8 +5,8 @@ description: |
   tournament-manager is a command-line tool
   to manage tournaments with the swiss system.
 
-grade: devel
-confinement: devmode
+grade: stable
+confinement: strict
 
 parts:
   tournament-manager:
