--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -13,6 +13,7 @@ parts:
     source: https://github.com/fabianWrede/tournament-manager
     source-type: git
     source-subdir: src/
+    source-tag: v1.0.2
     plugin: python
     python-version: python3
 
