--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -15,6 +15,8 @@ parts:
     source-subdir: src/
     plugin: python
     python-version: python3
+    stage-packages:
+      - texlive
 
 apps:
   tournament-manager:
